# Board

./: Makefile  db-.sqlite3  pyproject.toml  uwsgi.ini
baord/: views.py
board/: apps.py  authentication.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_rename_board_like_user_id_e3fc4d_idx_board_like_user_348a97_idx_and_more.py  0003_alter_comment_email_alter_post_email_and_more.py
board/routers/: board_router.py
board/serializers/: board_serializer.py  like_serializer.py  post_serializer.py  serializers.py
board/services/: comment_service.py  like_service.py  post_service.py  services.py
board/signals/: post_signal.py
board/tasks/: file_task.py  post_task.py  tasks.py
board/utils/: cache.py  file_uploader.py
board/views/: board_view.py  comment_view.py  like_view.py  post_view.py  views.py
config/: __init__.py  asgi.py  settings.py  urls.py
config/settings/: __init__.py  base.py  channels.py  jwt.py  local.py  logging.py  main.py  production.py
