[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-allauth>=0.0.1",
    "celery>=5.5.3",
    "channels>=4.2.2",
    "daphne>=4.2.0",
    "dj-database-url>=3.0.1",
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "django-prometheus>=2.4.0",
    "django-redis>=6.0.0",
    "django-split-settings>=1.3.2",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.0",
    "pytest-django>=4.11.1",
    "redis>=6.2.0",
    "rest-framework-simplejwt>=0.0.2",
    "uv>=0.7.20",
    "uvicorn>=0.34.3",
    "drf-nested-routers>=0.94.2",
    "adrf>=0.1.9",
]
